[workspace]

default-members = ["bot"]
members = ["bot", "web"]
exclude = ["tools/builder"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
debug = true

[patch.crates-io]
runestick = { git = "https://github.com/rune-rs/rune" }
rune = { git = "https://github.com/rune-rs/rune" }
rune-modules = { git = "https://github.com/rune-rs/rune" }
