[workspace]
default-members = ["bot"]
members = [
    "bot",
    "web",
    "tools/builder",
    "crates/*"
]

[workspace.dependencies]
api = { package = "bot-api", path = "crates/bot-api" }
auth = { package = "bot-auth", path = "crates/bot-auth" }
bus = { package = "bot-bus", path = "crates/bot-bus" }
chat = { package = "bot-chat", path = "crates/bot-chat" }
common = { package = "bot-common", path = "crates/bot-common" }
currency = { package = "bot-currency", path = "crates/bot-currency" }
db = { package = "bot-db", path = "crates/bot-db" }
emotes = { package = "bot-emotes", path = "crates/bot-emotes" }
messagelog = { package = "bot-messagelog", path = "crates/bot-messagelog" }
oauth2 = { package = "bot-oauth2", path = "crates/bot-oauth2" }
player = { package = "bot-player", path = "crates/bot-player" }
settings = { package = "bot-settings", path = "crates/bot-settings" }
storage = { package = "bot-storage", path = "crates/bot-storage" }
template = { package = "bot-template", path = "crates/bot-template" }
web = { package = "bot-web", path = "crates/bot-web" }
anyhow = "1.0.70"
async-fuse = "0.11.4"
async-injector = "0.19.1"
chrono = { version = "0.4.24", default-features = false, features = ["serde"] }
diesel = "2.0.3"
parking_lot = "0.12.1"
serde = { version = "1.0.160", features = ["derive", "rc"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
smallvec = { version = "1.10.0", features = ["serde"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", default-features = false, features = ["sync"] }
tracing = "0.1.37"
url = { version = "2.3.1", features = ["serde"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
debug = true
