[workspace]
default-members = ["bot"]
members = [
    "bot",
    "web",
    "tools/builder",
    "crates/*"
]

[workspace.dependencies]
api = { package = "oxidize-api", path = "crates/oxidize-api" }
auth = { package = "oxidize-auth", path = "crates/oxidize-auth" }
bus = { package = "oxidize-bus", path = "crates/oxidize-bus" }
chat = { package = "oxidize-chat", path = "crates/oxidize-chat" }
common = { package = "oxidize-common", path = "crates/oxidize-common" }
currency = { package = "oxidize-currency", path = "crates/oxidize-currency" }
db = { package = "oxidize-db", path = "crates/oxidize-db" }
emotes = { package = "oxidize-emotes", path = "crates/oxidize-emotes" }
messagelog = { package = "oxidize-messagelog", path = "crates/oxidize-messagelog" }
oauth2 = { package = "oxidize-oauth2", path = "crates/oxidize-oauth2" }
player = { package = "oxidize-player", path = "crates/oxidize-player" }
settings = { package = "oxidize-settings", path = "crates/oxidize-settings" }
storage = { package = "oxidize-storage", path = "crates/oxidize-storage" }
template = { package = "oxidize-template", path = "crates/oxidize-template" }
web = { package = "oxidize-web", path = "crates/oxidize-web" }
anyhow = "1.0.70"
async-fuse = "0.11.4"
async-injector = "0.19.1"
chrono = { version = "0.4.24", default-features = false, features = ["serde"] }
diesel = "2.0.3"
parking_lot = "0.12.1"
serde = { version = "1.0.160", features = ["derive", "rc"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
smallvec = { version = "1.10.0", features = ["serde"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", default-features = false, features = ["sync"] }
tracing = "0.1.37"
url = { version = "2.3.1", features = ["serde"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
debug = true
