[package]
name = "oxidize"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.68"
description = "A high performance Twitch Bot powered by Rust."
documentation = "https://docs.rs/oxidize"
readme = "README.md"
homepage = "https://github.com/udoprog/OxidizeBot"
repository = "https://github.com/udoprog/OxidizeBot"
license = "MIT/Apache-2.0"
keywords = ["twitch"]
categories = ["games"]

[dependencies]
anyhow = "1.0.70"
argwerk = "0.20.4"
async-fuse = { version = "0.11.4", features = ["stream"] }
async-injector = "0.18.5"
async-stream = "0.3.5"
async-trait = "0.1.68"
backoff = "0.4.0"
backtrace = "0.3.67"
bytes = "1.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = { version = "0.8.1", features = ["serde"] }
crossbeam = "0.8.2"
diesel = { version = "2.0.3", features = ["sqlite", "chrono"] }
diesel_migrations = "2.0.0"
dirs = "5.0.0"
eudex = "0.1.1"
fixed-map = "0.8.2"
futures-cache = "0.10.3"
futures-core = "0.3.28"
futures-util = "0.3.28"
graphql_client = { version = "0.12.0", default-features = false, features = ["graphql_query_derive"] }
handlebars = "4.3.6"
hex = "0.4.3"
ignore = "0.4.20"
Inflector = "0.11.4"
irc = "0.15.0"
lazy_static = "1.4.0"
leaky-bucket = "0.12.4"
libsqlite3-sys = { version = "0.25.2", features = ["bundled", "unlock_notify"] }
mime = "0.3.17"
mime_guess = "2.0.4"
mysql_async = "0.31.3"
notify = "5.1.0"
parking_lot = "0.12.1"
percent-encoding = "2.2.0"
rand = "0.8.5"
regex = "1.7.3"
relative-path = { version = "1.8.0", features = ["serde"] }
reqwest = "0.11.16"
rust-embed = { version = "6.6.1", features = ["interpolate-folder-path"] }
serde = { version = "1.0.159", features = ["rc"] }
serde_cbor = "0.11.2"
serde_json = "1.0.95"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.21"
slab = "0.4.8"
smallvec = { version = "1.10.0", features = ["serde"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
tokio-tungstenite = { version = "0.18.0", features = ["rustls"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-core = "0.1.30"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tungstenite = "0.18.0"
uom = "0.34.0"
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
warp = "0.3.4"
webbrowser = "0.8.8"

rune = { version = "0.12.3", optional = true }
rune-modules = { version = "0.12.3", features = ["full"], optional = true }

[build-dependencies]
winres = "0.1.12"
anyhow = "1.0.70"

[target.'cfg(target_os = "windows")'.dependencies]
futures-executor = "0.3.28"
winapi = { version = "0.3.9", features = ["shellapi", "impl-default"] }

[features]
default = []
windows = []
scripting = ["rune", "rune-modules"]
