[package]
name = "oxidize"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.68"
description = "A high performance Twitch Bot powered by Rust."
documentation = "https://docs.rs/oxidize"
readme = "README.md"
homepage = "https://github.com/udoprog/OxidizeBot"
repository = "https://github.com/udoprog/OxidizeBot"
license = "MIT/Apache-2.0"
keywords = ["twitch"]
categories = ["games"]

[dependencies]
web = { package = "bot-web", path = "../crates/bot-web" }
settings = { package = "bot-settings", path = "../crates/bot-settings" }
db = { package = "bot-db", path = "../crates/bot-db" }
api = { package = "bot-api", path = "../crates/bot-api" }
auth = { package = "bot-auth", path = "../crates/bot-auth" }
bus = { package = "bot-bus", path = "../crates/bot-bus" }
common = { package = "bot-common", path = "../crates/bot-common" }
currency = { package = "bot-currency", path = "../crates/bot-currency" }
player = { package = "bot-player", path = "../crates/bot-player" }
oauth2 = { package = "bot-oauth2", path = "../crates/bot-oauth2" }
messagelog = { package = "bot-messagelog", path = "../crates/bot-messagelog" }
template = { package = "bot-template", path = "../crates/bot-template" }
storage = { package = "bot-storage", path = "../crates/bot-storage" }
rune = { version = "0.12.3", optional = true }
rune-modules = { version = "0.12.3", features = ["full"], optional = true }
async-injector = "0.18.5"
rand = "0.8.5"
serde_json = "1.0.95"
webbrowser = "0.8.8"
tracing-appender = "0.2.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tokio = { version = "1.27.0", features = ["full", "tracing"] }
dirs = "5.0.0"
async-trait = "0.1.68"
chrono = { version = "0.4.24", default-features = false }
async-fuse = "0.11.4"
anyhow = "1.0.70"
notify = "5.1.0"
argwerk = "0.20.4"
url = "2.3.1"
regex = "1.7.3"
smallvec = "1.10.0"
parking_lot = "0.12.1"
slab = "0.4.8"
thiserror = "1.0.40"
serde = { version = "1.0.159", features = ["derive"] }
async-stream = "0.3.5"
irc = { version = "0.15.0", default-features = false, features = ["tokio-native-tls", "native-tls"] }
chrono-tz = { version = "0.8.2", features = ["serde"] }
leaky-bucket = "0.12.4"

[build-dependencies]
winres = "0.1.12"
anyhow = "1.0.70"

[target.'cfg(target_os = "windows")'.dependencies]
futures-executor = "0.3.28"
winapi = { version = "0.3.9", features = ["shellapi", "impl-default"] }

[features]
default = []
windows = []
scripting = ["rune", "rune-modules"]
