[package]
name = "oxidize"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.81"
description = "A high performance Twitch Bot powered by Rust."
documentation = "https://docs.rs/oxidize"
readme = "README.md"
homepage = "https://github.com/udoprog/OxidizeBot"
repository = "https://github.com/udoprog/OxidizeBot"
license = "MIT OR Apache-2.0"
keywords = ["twitch"]
categories = ["games"]

[features]
default = []
cli = []
scripting = ["chat/scripting"]

[dependencies]
web = { workspace = true }
settings = { workspace = true }
db = { workspace = true }
api = { workspace = true }
auth = { workspace = true }
bus = { workspace = true }
common = { workspace = true }
currency = { workspace = true }
emotes = { workspace = true }
player = { workspace = true }
oauth2 = { workspace = true }
messagelog = { workspace = true }
template = { workspace = true }
storage = { workspace = true }
chat = { workspace = true }
async-injector =  { workspace = true }
rand = "0.8.5"
serde_json = { workspace = true }
webbrowser = "0.8.9"
tracing-appender = "0.2.2"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tokio = { workspace = true, features = ["full", "tracing"] }
dirs = "5.0.0"
async-trait = "0.1.68"
chrono = { workspace = true }
async-fuse = { version = "0.11.4", features = ["stream"] }
anyhow = { workspace = true }
argwerk = "0.20.4"
url = { workspace = true }
regex = "1.7.3"
parking_lot = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
async-stream = "0.3.5"
chrono-tz = { version = "0.8.2", features = ["serde"] }
smallvec = { version = "1.10.0", features = ["serde"] }

[build-dependencies]
winres = "0.1.12"
anyhow = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["shellapi", "impl-default"] }
