[package]
name = "setmod-gfx"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[dependencies]
pretty_env_logger = "0.3.0"
image = "0.19"
log = "0.4"
winit = "0.18"
glsl-to-spirv = "0.1.4"
failure = "0.1.5"

setmod-notifier = {version = "0.1.0", path = "../notifier"}

[dependencies.hal]
package = "gfx-hal"
git = "https://github.com/gfx-rs/gfx"
version = "0.1"

[dependencies.gfx-backend-empty]
git = "https://github.com/gfx-rs/gfx"
version = "0.1"

[dependencies.gfx-backend-gl]
git = "https://github.com/gfx-rs/gfx"
version = "0.1"
features = ["glutin"]
optional = true

[dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx"
version = "0.1"
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
git = "https://github.com/gfx-rs/gfx"
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
git = "https://github.com/gfx-rs/gfx"
version = "0.1"
optional = true