[package]
name = "setmod-notifier"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
failure = "0.1"
log = "0.4.6"
futures = "0.1.25"
serde = {version = "1.0.88", features = ["derive"]}
serde_json = "1.0.38"
tokio = "0.1.15"
tokio-bus = "0.1.1"