[package]
name = "oxidize-web"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
bytes = "1.0.1"
hyper = { version = "0.14.2", features = ["server", "http1", "stream"] }
tokio = { version = "1.1.0", features = ["full"] }
tokio-stream = "0.1.2"
anyhow = "1.0.38"
thiserror = "1.0.23"
serde = { version = "1.0.120", features = ["rc", "derive"] }
serde_json = "1.0.61"
serde_cbor = "0.11.1"
toml = "0.5.8"
serde_urlencoded = "0.7.0"
log = "0.4.13"
pretty_env_logger = "0.4.0"
reqwest = "0.11.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.33.3"
rust-embed = { version = "5.9.0", features = ["interpolate-folder-path"] }
mime_guess = "2.0.3"
mime = "0.3.16"
smallvec = "1.6.1"
cookie = { version = "0.14.3", features = ["percent-encode"] }
base64 = "0.13.0"
time = "0.2.24"
async-oauth2 = "0.3.0"
url = { version = "2.2.0", features = ["serde"] }
parking_lot = "0.11.1"
sled28 = { package = "sled", version = "0.28.0" }
sled31 = { package = "sled", version = "0.31.0" }
ring = "0.16.19"
relative-path = { version = "1.3.2", features = ["serde"] }
pin-utils = "0.1.0"
