[package]
name = "oxidize-web"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
description = "The web component of OxidizeBot, a high performance Twitch Bot powered by Rust."
documentation = "https://docs.rs/oxidize"
readme = "README.md"
homepage = "https://github.com/udoprog/OxidizeBot"
repository = "https://github.com/udoprog/OxidizeBot"
license = "MIT/Apache-2.0"
keywords = ["twitch"]
categories = ["bots"]

[dependencies]
bytes = "1.4.0"
hyper = { version = "0.14.25", features = ["server", "http1", "stream"] }
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"
anyhow = "1.0.69"
thiserror = "1.0.39"
serde = { version = "1.0.156", features = ["rc", "derive"] }
serde_json = "1.0.94"
serde_cbor = "0.11.2"
toml = "0.7.3"
serde_urlencoded = "0.7.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
reqwest = "0.11.14"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }
rust-embed = { version = "6.6.0", features = ["interpolate-folder-path"] }
mime_guess = "2.0.4"
mime = "0.3.16"
smallvec = "1.10.0"
cookie = { version = "0.17.0", features = ["percent-encode"] }
base64 = "0.21.0"
time = "0.3.20"
async-oauth2 = "0.4.1"
url = { version = "2.3.1", features = ["serde"] }
parking_lot = "0.12.1"
sled28 = { package = "sled", version = "0.28.0" }
sled31 = { package = "sled", version = "0.31.0" }
ring = "0.16.20"
relative-path = { version = "1.8.0", features = ["serde"] }
pin-utils = "0.1.0"
