[package]
name = "web"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.79"
description = "The web component of OxidizeBot, a high performance Twitch Bot powered by Rust."
documentation = "https://docs.rs/oxidize"
readme = "README.md"
homepage = "https://github.com/udoprog/OxidizeBot"
repository = "https://github.com/udoprog/OxidizeBot"
license = "MIT OR Apache-2.0"
keywords = ["twitch"]
categories = ["bots"]

[dependencies]
anyhow = { workspace = true }
async-oauth2 = "0.5.0"
base64 = "0.21.0"
bytes = "1.4.0"
chrono = { workspace = true }
clap = { version = "4.2.2", features = ["derive"] }
cookie = { version = "0.17.0", features = ["percent-encode"] }
hyper = { version = "0.14.26", features = ["server", "http1", "stream", "tcp"] }
mime = "0.3.17"
mime_guess = "2.0.4"
parking_lot = { workspace = true }
relative-path = { version = "1.8.0", features = ["serde"] }
reqwest = "0.12.3"
ring = "0.17.8"
rust-embed = { version = "6.6.1", features = ["interpolate-folder-path"] }
serde = { workspace = true }
serde_cbor = "0.11.2"
serde_json = { workspace = true }
serde_urlencoded = "0.7.1"
sled28 = { package = "sled", version = "0.28.0" }
sled31 = { package = "sled", version = "0.31.0" }
smallvec = { workspace = true }
thiserror = { workspace = true }
time = "0.3.20"
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-stream = "0.1.12"
toml = "0.7.3"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = { workspace = true }
