[package]
name = "bot-api"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
settings = { package = "bot-settings", path = "../bot-settings" }
common = { package = "bot-common", path = "../bot-common" }
bus = { package = "bot-bus", path = "../bot-bus" }
serde = "1.0.159"
serde_json = "1.0.95"
tokio-tungstenite = "0.18.0"
async-injector = "0.18.5"
tracing = "0.1.37"
tungstenite = { version = "0.18.0", default-features = false }
chrono = { version = "0.4.24", default-features = false }
reqwest = "0.11.16"
url = "2.3.1"
graphql_client = "0.12.0"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["sync"] }
anyhow = "1.0.70"
backoff = "0.4.0"
async-fuse = "0.11.4"
async-stream = "0.3.5"
parking_lot = "0.12.1"
bytes = "1.4.0"
