[package]
name = "bot-common"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.3", default-features = false, features = ["with-deprecated"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio-stream = { version = "0.1.12", default-features = false }
tracing = "0.1.37"
url = "2.3.1"
