[package]
name = "bot-currency"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
db = { workspace = true }
api = { workspace = true }
common = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-injector = { workspace = true }
diesel = { workspace = true }
mysql_async = "0.31.3"
serde = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
