[package]
name = "bot-player"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
common = { package = "bot-common", path = "../bot-common" }
api = { package = "bot-api", path = "../bot-api" }
bus = { package = "bot-bus", path = "../bot-bus" }
db = { package = "bot-db", path = "../bot-db" }
settings = { package = "bot-settings", path = "../bot-settings" }
storage = { package = "bot-storage", path = "../bot-storage" }
auth = { package = "bot-auth", path = "../bot-auth" }
async-fuse = "0.11.4"
rand = "0.8.5"
tokio = { version = "1.27.0", default-features = false, features = ["time", "sync", "macros"] }
thiserror = "1.0.40"
async-injector = "0.18.5"
anyhow = "1.0.70"
parking_lot = "0.12.1"
serde = { version = "1.0.159", features = ["derive"] }
tracing = "0.1.37"
async-stream = "0.3.5"
chrono = { version = "0.4.24", default-features = false }
