[package]
name = "bot-player"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
common = { workspace = true }
api = { workspace = true }
bus = { workspace = true }
db = { workspace = true }
settings = { workspace = true }
storage = { workspace = true }
auth = { workspace = true }
async-fuse = { workspace = true }
rand = "0.8.5"
tokio = { workspace = true, features = ["time", "macros"] }
thiserror = { workspace = true }
async-injector = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
async-stream = "0.3.5"
chrono = { workspace = true }
