[package]
name = "bot-settings"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
common = { package = "bot-common", path = "../bot-common" }
db = { package = "bot-db", path = "../bot-db" }
diesel = "2.0.3"
futures-util = { version = "0.3.28", default-features = false, features = ["alloc"] }
serde = "1.0.159"
serde_json = "1.0.95"
serde_yaml = "0.9.21"
tokio = { version = "1.27.0", features = ["sync", "macros"] }
tracing = "0.1.37"
chrono-tz = "0.8.2"
thiserror = "1.0.40"
