[package]
name = "bot-web"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
db = { workspace = true }
settings = { workspace = true }
api = { workspace = true }
common = { workspace = true }
auth = { workspace = true }
template = { workspace = true }
bus = { workspace = true }
storage = { workspace = true }
messagelog = { workspace = true }
player = { workspace = true }
currency = { workspace = true }
warp = "0.3.4"
serde_json = { workspace = true }
percent-encoding = "2.2.0"
mime = "0.3.17"
mime_guess = { version = "2.0.4", default-features = false }
async-injector = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rust-embed = { version = "6.6.1", features = ["interpolate-folder-path"] }
