[package]
name = "oxidize-auth"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
common = { workspace = true }
db = { workspace = true }
settings = { workspace = true }
diesel = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
