[package]
name = "oxidize-chat"
version = "0.0.0"
edition = "2021"
publish = false

[features]
scripting = ["rune", "rune-modules", "ignore", "db/scripting"]

[dependencies]
db = { workspace = true }
common = { workspace = true }
emotes = { workspace = true }
api = { workspace = true }
auth = { workspace = true }
settings = { workspace = true }
bus = { workspace = true }
messagelog = { workspace = true }
currency = { workspace = true }
storage = { workspace = true }
async-trait = "0.1.68"
notify = "5.1.0"
rune = { version = "0.12.3", optional = true }
rune-modules = { version = "0.12.3", features = ["full"], optional = true }
ignore = { version = "0.4.20", optional = true }
async-injector = { workspace = true }
url = "2.3.1"
tracing = { workspace = true }
irc = { version = "0.15.0", default-features = false, features = ["tokio-native-tls", "native-tls", "tls-rust"] }
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["time"] }
parking_lot = { workspace = true }
slab = "0.4.8"
smallvec = { workspace = true }
leaky-bucket = "0.12.4"
async-fuse = { version = "0.11.4", features = ["stream"] }
thiserror = { workspace = true }
async-stream = "0.3.5"
