[package]
name = "oxidize-common"
edition = "2021"
publish = false

[dependencies]
chrono = { workspace = true }
diesel = { workspace = true, features = ["sqlite"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "alloc"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-stream = { version = "0.1.12", default-features = false, features = [] }
tracing = { workspace = true }
url = { workspace = true }
