[package]
name = "oxidize-currency"
edition = "2021"
publish = false

[dependencies]
db = { workspace = true }
api = { workspace = true }
common = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-injector = { workspace = true }
diesel = { workspace = true }
mysql_async = "0.34.1"
serde = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
