[package]
name = "oxidize-emotes"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
api = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
storage = { workspace = true }
common = { workspace = true }
template = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
