[package]
name = "oxidize-settings"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
common = { workspace = true }
db = { workspace = true }
diesel = { workspace = true }
futures-util = { version = "0.3.28", default-features = false, features = ["alloc"] }
serde = "1.0.160"
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
chrono-tz = "0.8.2"
thiserror = { workspace = true }
